@@ -1,3 +1,7 @@
+2022-12-10  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* include/kernaux/macro.h: Macros "KERNAUX_CAST_(VAR|CONST)" have been added
+
 2022-12-09  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* include/kernaux/generic/display.h: The header has been added
